<resources>
    <string name="app_name">Calculadora de Resistencias</string>
    <string name="franja1">Banda #1</string>
    <string name="franja2">Banda #2</string>
    <string name="info">Ingrese en orden el color de cada banda (franja de color)</string>
    <string name="start">Start</string>
    <string name="resistencia">Valor resistencia</string>
    <string name="franja3">Multiplicador</string>
    <string name="franja4">Tolerancia</string>

    <string-array name="banda1_list">
        <item>Seleciona</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="banda2_list">
        <item>Seleciona</item>
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="banda3_list">
        <item>Seleciona</item>
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="banda4_list">
        <item>Seleciona</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Dorado</item>
        <item>Plata</item>

    </string-array>
</resources>